# api/controllers/satellites.js
@@ -2,21 +2,27 @@
 
 var util = require('util');
 
+var T = require('../helpers/sql/tables');
+
 module.exports = {  
   listSatellites: listSatellites,
   listPlanetSatellites: listPlanetSatellites,
+  createSatellite: createSatellite,
   getSatellite: getSatellite
 };
 
 function listSatellites(req, res) {
-  tables.satellites.get(null, null).then(function(info) { res.json(info) });
+  T.satellites.get(null, null).then(info => res.json(info));
 }
 
 function listPlanetSatellites(req, res) {
-  tables.satellites.get(req.swagger.params.planetId.value, null).then(function(info) { res.json(info) });
+  T.satellites.get(req.swagger.params.planetId.value, null).then(info => res.json(info));
+}
+
+function createSatellite(req, res) {
+  T.satellites.new(req.swagger.params.planetId.value, req.swagger.params.satellite.value).then(data => res.json(data));
 }
 
 function getSatellite(req, res) {
-  tables.satellites.get(req.swagger.params.planetId.value, req.swagger.params.satelliteId.value)
-  			  .then(function(data) { res.json(data) });
+  T.satellites.get(req.swagger.params.planetId.value, req.swagger.params.satelliteId.value).then(data => res.json(data));
 }
